# Yadro_club_task

./: .gitignore  CMakeLists.txt  README.md
include/: BaseStructs.h  Client.h  ClientTime.h  Club.h  Constants.h  EventHandlers.h  InputParser.h  Table.h
src/: Client.cpp  ClientTime.cpp  Club.cpp  EventHandlers.cpp  InputParser.cpp  Table.cpp  main.cpp
